# game-social-network-app/src/main/java/be/intecbrussel/gamesocialnetworkapp/models/user/User.java
@@ -1,5 +1,6 @@
 package be.intecbrussel.gamesocialnetworkapp.models.user;
 
+import be.intecbrussel.gamesocialnetworkapp.models.Comment;
 import be.intecbrussel.gamesocialnetworkapp.models.Post;
 import com.fasterxml.jackson.annotation.JsonManagedReference;
 import jakarta.persistence.*;
@@ -56,6 +57,9 @@ public class User implements UserDetails, Principal {
 
     @OneToMany(mappedBy = "author")
     private List<Post> posts;
+
+    @OneToMany(mappedBy = "author")
+    private List<Comment> comments;
 
     @CreatedDate
     @Column(nullable = false, updatable = false)
